fixed path for including userIds js file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>User Id Search</title>
-  <script type="text/javascript" src="userIds.js"></script>
+  <script type="text/javascript" src="/userIds.js"></script>
 </head>
 
 <body>
